<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartPage">

    <TextView
        android:id="@+id/title"

        android:layout_width="412dp"
        android:layout_height="98dp"
        android:background="#160101"
        android:backgroundTint="#62D8E9"
        android:fontFamily="sans-serif-thin"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="134dp"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginBottom="232dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="406dp"
        android:layout_height="24dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/blue"
        android:fadingEdge="vertical"
        android:fontFamily="sans-serif"
        android:text="Here to help track your personal expenses!"
        android:textAlignment="center"
        android:textSize="13sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>